[package]
name = "ord-qtumcore-rpc"
version = "0.18.0-qtum"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "The Qtum Developers"
]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/qtumproject/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = ["crypto", "bitcoin", "bitcoin-core", "rpc"]
readme = "README.md"
edition = "2018"
autotests = false

[lib]
name = "qtumcore_rpc"
path = "src/lib.rs"

[dependencies]
ord-qtumcore-rpc-json = { version = "0.18.0-qtum", path = "../json" }

log = "0.4.5"
jsonrpc = "0.14.0"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3.3.0"

