[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
edition = "2018"
autotests = false
publish = false

[dependencies]
ord-qtumcore-rpc = { path = "../client" }
qtum = {version = "0.30.0-qtum", features = ["serde", "rand"]}
lazy_static = "1.4.0"
log = "0.4"
qtum-private = {version = "0.1.0-qtum"}
qtum_hashes = {version = "0.12.0-qtum"}