[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
edition = "2018"
autotests = false
publish = false

[dependencies]
ord-qtumcore-rpc = { path = "../client" }
qtum = { path = "../../rust-bitcoin/qtum", version = "0.31.0-qtum", features = ["serde", "rand"]}
lazy_static = "1.4.0"
log = "0.4"
