[package]
name = "ord-qtumcore-rpc-json"
version = "0.17.1-qtum"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "The Qtum developers"
]
license = "CC0-1.0"
repository = "https://github.com/qtumproject/rust-bitcoincore-rpc/"
description = "JSON-enabled type structs for bitcoincore-rpc crate."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc" ]
readme = "README.md"
edition = "2018"
autotests = false

[lib]
name = "qtumcore_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

qtum = {version = "0.30.0-qtum", features = ["serde", "rand-std"]}
qtum-private = {version = "0.1.0-qtum"}
qtum_hashes = {version = "0.12.0-qtum"}
